--- a/views/signin.pug
+++ b/views/signin.pug
@@ -1,11 +1,11 @@
 #signinModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='ModalLabel', aria-hidden='true')
     .modal-dialog(role='document')
-        .modal-content
+        .modal-content.container
             .modal-header
                 h3#ModalLabel.modal-title 로그인
                 button.close(type='button', data-dismiss='modal', aria-label='Close')
                     span(aria-hidden='true') ×
-            .modal-body
+            .modal-body.text-center
                 form(action='/signin/1', method='POST')
                     button.btn.btn-primary.btn-lg.col-6(type='submit') 사용자1
                 form(action='/signin/2', method='POST')
