--- a/views/error.pug
+++ b/views/error.pug
@@ -1,7 +1,8 @@
 extends layout
 
-block content
+block hero-unit
     .container
     h1.main-title.text-danger Error #{error.status}
-    .alert.alert-danger= message
-    pre #{error.stack}
+    if error.status == 404
+        .alert.alert-danger 잘못된 접근입니다.
+    //- pre #{error.stack}
