--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,8 @@ html
         script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js')
         script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js')
+        script(src='/javascript/form.js')
     body
         block header
             include ./includes/header
