--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,6 +16,8 @@ html
         script(src='/javascript/datepicker.js')
         script(src='/javascript/form.js')
         script(src='/javascript/isAll.js')
+        script(src='/javascript/duplicate.js')
+
     body
         block header
             include ./includes/header
