--- a/views/reservation_form.pug
+++ b/views/reservation_form.pug
@@ -18,7 +18,7 @@ block content
         .form-group
             label(for='date') 날짜
             input#datepicker.form-control(name='date', type='text', placeholder='클릭하고, 날짜를 선택하세요')
-        - var time = [['4:00', 4],['5:00', 5],['6:00', 6],['7:00', 7],['8:00', 8]]
+        - var time = [['1:00', 1],['2:00', 2],['3:00', 3],['4:00', 4],['5:00', 5],['6:00', 6],['7:00', 7],['8:00', 8]]
         .form-group
             label(for='start') 시작시간
             select#start.form-control(name='start')
@@ -50,3 +50,5 @@ block content
         a.btn.btn-outline-secondary(href='/') 취소
         | 
         button#submit.btn.btn-primary(type='submit') 예약
+
+
