--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -1,6 +1,6 @@
 .nav-scroller.py-1.mb-2
     nav.nav.d-flex.justify-content-between
         a.p-2.text-dark(href='/') 홈
-        a.p-2.text-dark(href='/reservation') 강의실 예약
+        a.p-2.text-dark(href='/reservations') 강의실 예약
         a.p-2.text-dark(href='/') 예약 확인
         a.p-2.text-dark.disabled(aria-disabled="true") 문의
