--- a/views/reservations/new_room.pug
+++ b/views/reservations/new_room.pug
@@ -18,9 +18,6 @@ block content
         .form-group
             label(for='date') 날짜
             input#datepicker.form-control(name='date', type='text', placeholder='클릭하고, 날짜를 선택하세요')
-        - var time = [['1:00', 1],['2:00', 2],['3:00', 3],['4:00', 4],['5:00', 5],['6:00', 6],['7:00', 7],['8:00', 8]]
         a.btn.btn-outline-secondary(href='/') 취소
         | 
-        button#submit.btn.btn-primary(type='submit') 다음
-
-
+        button.btn.btn-primary(href=``) 다음
