--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html
         script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.js')
         script(src='/javascript/datepicker.js')
         script(src='/javascript/form.js')
-        //- script(src='/javascript/isAll.js')
+        script(src='/javascript/isAll.js')
 
     body
         block header
