--- a/views/reservations/new_room.pug
+++ b/views/reservations/new_room.pug
@@ -20,4 +20,4 @@ block content
             input#datepicker.form-control(name='date', type='text', placeholder='클릭하고, 날짜를 선택하세요')
         a.btn.btn-outline-secondary(href='/') 취소
         | 
-        button.btn.btn-primary(href=``) 다음
+        button#next.btn.btn-primary(href=``) 다음
