--- a/views/reservations/new_room.pug
+++ b/views/reservations/new_room.pug
@@ -17,7 +17,7 @@ block content
                     option(value=dp.room_num)= dp.room_num
         .form-group
             label(for='date') 날짜
-            input#datepicker.form-control(name='date', type='text', placeholder='클릭하고, 날짜를 선택하세요')
+            input#datepicker.form-control(name='date', type='text', placeholder='클릭하고, 날짜를 선택하세요', readonly='')
         a.btn.btn-outline-secondary(href='/') 취소
         | 
         button#next.btn.btn-primary(href=``) 다음
