--- a/views/reservations/new_time.pug
+++ b/views/reservations/new_time.pug
@@ -41,6 +41,6 @@ block content
             //- input.form-control(type='text', id='name', name='name', placeholder='사용목적을 선택하세요')
         a.btn.btn-outline-secondary(href='/') 취소
         | 
-        button#submit.btn.btn-primary(type='submit') 예약
+        button#submit.btn.btn-primary(type='submit', disabled) 예약
 
 
